--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ hr {
 	margin: 0 0 1.6rem;
 }
 
-.container {
+.container
+{
 	padding: 0;
 	margin: 0 auto;
 	width: 100%;
@@ -164,6 +165,12 @@ hr {
 }
 
 @media (min-width: 800px) {
+
+	#container-article-sidebar {
+		display: flex;
+		justify-content: space-between;
+	}
+
 	.header_pub-info {
 		flex-direction: row;
 		justify-content: space-between;
@@ -171,10 +178,17 @@ hr {
 	}
 
 	.main-article {
-		width: 60%;
+		width: 58%;
 		border-radius: 0.6rem;
 		margin: 0;
 	}
+
+	#article-nosidebar {
+		width: 100%;
+		border-radius: 0.6rem;
+		margin: 0;
+	}
+
 
 	.main-sidebar {
 		width: 40%;
